[package]
name = "proyecto1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl_wrapper = { git = "https://github.com/zkwinkle/sdl_wrapper" }
svg = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
itertools = "0.10"
